Properly styled the sidebar, adding small-lis

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -10,6 +10,7 @@ body {
   font-style: normal;
   font-size: 14px;
   color: #222222;
+  overflow: hidden;
 }
 
 #graph-container {
@@ -53,26 +54,43 @@ body {
   background-color: rgb(76, 179, 218);
 }
 
-#sidebar-container {
+#sidebar {
   position: absolute;
   top: 0;
   right: 0;
-  width: 165px;
-  background-color: black;
-}
-
-#layers {
+  width: 150px;
+  background-color: #0d0d0d;
   overflow-x: hidden;
   overflow-y: auto;
   list-style-type: none;
+}
+
+#show-sidebar {
+  cursor: pointer;
+  position: absolute;
+  text-align: center;
+  vertical-align: middle;
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #0d0d0d;
 }
 
 li {
   width: 150px;
   height: 150px;
   text-align: center;
+/*  line-height: 150px;*/
   background-color: black;
   color: white;
+}
+
+.small-li {
+  height: 50px;
+  line-height: 50px;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 li:hover {
@@ -81,6 +99,17 @@ li:hover {
   cursor: pointer;
 }
 
+.layer {
+  padding-top: 45px;
+  height: 150px;
+}
+
 .selected {
   background-color: rgb(76, 179, 218);
+}
+
+.text {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 300;
 }
