--- a/views/start.erb
+++ b/views/start.erb
@@ -29,41 +29,113 @@
     </svg>
     <script src="svgpan.js"></script>
     <div id="show-file-upload"></div>
+    <div id="show-sidebar"></div>
     <div id="file-upload">
       drag and drop an intervention folder/files here
       <div id="status">
         <span id="current_file_progress">0</span>/<span id="total_files">0</span>
       </div>
     </div>
-    <div id="sidebar-container">
-      <ul id="layers">
-        <li id='show_link'>Highlight show links</li>
-        <li id='after_link'>Highlight after links</li>
-        <li id='div_link'>Highlight div links</li>
-        <li id='a_link'>Highlight a links</li>
-        <li>Label5</li>
-        <li>Label6</li>
-        <li>Label7</li>
-        <li>Label8</li>
-        <li>Label9</li>
-      </ul>
-    </div>
+    <ul id="sidebar">
+      <li class="small-li" id="hide-sidebar">
+        hide sidebar
+      </li>
+      <li class="small-li" id="toggle-all">
+        toggle all layers
+      </li>
+      <li class="small-li" id="clear-all">
+        clear all layers
+      </li>
+      <li id='show_link'>
+        <div class="layer">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="50px" height="20px">
+            <line x1="10" y1="10" x2="40" y2="10" style="stroke:rgb(255,49,0);stroke-width:2" />
+            <circle cx="10" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+            <circle cx="40" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+          </svg>
+          <br />
+          <span class="text">Highlight<br /><strong>show</strong> links</span>
+        </div>
+      </li>
+      <li id='after_link'>
+        <div class="layer">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="50px" height="20px">
+            <line x1="10" y1="10" x2="40" y2="10" style="stroke:rgb(100,12,171);stroke-width:2" />
+            <circle cx="10" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+            <circle cx="40" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+          </svg>
+          <br />
+          <span class="text">Highlight<br /><strong>after</strong> links</span>
+        </div>
+      </li>
+      <li id='div_link'>
+        <div class="layer">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="50px" height="20px">
+            <line x1="10" y1="10" x2="40" y2="10" style="stroke:rgb(65,219,0);stroke-width:2" />
+            <circle cx="10" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+            <circle cx="40" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+          </svg>
+          <br />
+          <span class="text">Highlight<br /><strong>div</strong> links</span>
+        </div>
+      </li>
+      <li id='a_link'>
+        <div class="layer">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="50px" height="20px">
+            <line x1="10" y1="10" x2="40" y2="10" style="stroke:rgb(12,93,165);stroke-width:2" />
+            <circle cx="10" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+            <circle cx="40" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
+          </svg>
+          <br />
+          <span class="text">Highlight<br /><strong>a href</strong> links</span>
+        </div>
+      </li>
+    </ul>
   </body>
 
   <script type="text/javascript">
   //styling JS
-  $("#sidebar-container").height($(window).height());
+  $("#sidebar").height($(window).height());
   $("#layers").height($(window).height());
-  $("#file-upload").css("top", $(window).height()/2-100);
-  $("#file-upload").css("left", $(window).width()/2-200);
+  $("#file-upload").css("top", $(window).height()/2-130);
+  $("#file-upload").css("left", $(window).width()/2-125);
 
   $("#show-file-upload").hide();
+  $("#sidebar").hide();
+  $("#show-sidebar").hide();
   $("#show-file-upload").click(function() {
     $("#file-upload").show();
-    $("#show-file-upload").hide();
+    $("#show-file-upload").hide()
+    $("#sidebar").hide();
     $("g").empty();
     $.each($('li.selected'), function() {
       $(this).removeClass('selected')
+    });
+  });
+  
+  $("#show-sidebar").click(function() {
+    $("#sidebar").show();
+    $("#show-sidebar").hide()
+  });
+  
+  $("#hide-sidebar").click(function() {
+    $("#sidebar").hide();
+    $("#show-sidebar").show();
+  });
+  
+  $("#toggle-all").click(function() {
+    $.each($("li:not(.small-li)"), function() {
+      if (!$(this).hasClass("selected")) {
+        $(this).trigger('click');
+      }
+    });
+  });
+  
+  $("#clear-all").click(function() {
+    $.each($("li:not(.small-li)"), function() {
+      if ($(this).hasClass("selected")) {
+        $(this).trigger('click');
+      }
     });
   });
   </script>
@@ -91,16 +163,19 @@
       $(this).addClass("selected");
       switch(this['id']) {
         case 'show_link':
-          colourLink('show', 'red');
+          colourLink('show', 'rgb(255,49,0)');
           break;      
         case 'after_link':
-          colourLink('after', 'pink');
+          colourLink('after', 'rgb(100,12,171)');
           break;
         case 'div_link':
-          colourLink('div', 'blue');
+          colourLink('div', 'rgb(65,219,0)');
           break;
         case 'a_link':
-          colourLink('a', 'green');
+          colourLink('a', 'rgb(12,93,165)');
+          break;
+        default:
+          $(this).removeClass("selected");
           break;
       }
     }
@@ -255,6 +330,7 @@
       $('#total_files').text('0');
       $('#current_file_progress').text('0');
       $("#file-upload").hide();
+      $("#sidebar").show();
       $("#show-file-upload").show();
       $.get('processFiles', function(data) {
         drawGraph(JSON.parse(data));
@@ -290,8 +366,8 @@
 
   //Code to produce tree
   //http://bl.ocks.org/4062045
-  var width = $(window).width(),
-      height = $(window).height();
+  var width = $(window).width()-150,
+      height = $(window).height()-50;
 
   var color = d3.scale.category20();
 
