--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -113,3 +113,38 @@ li:hover {
   font-size: 12px;
   font-weight: 300;
 }
+
+.file-upload-text {
+  cursor: default;
+  margin: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+.file-over {
+  outline: 5px dashed rgb(76, 179, 218);
+}
+
+/*! jQuery UI - v1.10.1 - 2013-03-07*/
+.ui-progressbar {
+  margin: 145px 15px 15px 15px;
+  height: 1.5em;
+  text-align: left;
+  overflow: hidden;
+}
+
+.ui-progressbar .ui-progressbar-value {
+  margin: -1px;
+  height: 100%;
+}
+
+.ui-widget-content {
+  border: 1px solid white;
+  background: white;
+}
+
+.ui-widget-header {
+  border: 1px solid rgb(76, 179, 218);
+  background: rgb(76, 179, 218);
+}
+/* ----------------------------------*/
