--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -61,7 +61,7 @@ body {
   width: 150px;
   background-color: #0d0d0d;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   list-style-type: none;
 }
 
@@ -114,7 +114,7 @@ li:hover {
   font-weight: 300;
 }
 
-.file-upload-text {
+#upload-text {
   cursor: default;
   margin: 15px;
   color: white;
