--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 body { 
-  background: white;
+  background: #eee;
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
