--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -34,6 +34,11 @@ body {
   color: white;
 }
 
+.tooltip_title {
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
 #file-upload {
   position: absolute;
   top: 50%;  left: 50%; /*adjusted in JS*/
