--- a/views/start.erb
+++ b/views/start.erb
@@ -23,6 +23,10 @@
       stroke-opacity: .6;
     }
     
+    .link_hover {
+      stroke: rgb(76, 179, 218);
+    }
+    
     .node:hover, .link:hover {
       stroke: rgb(76, 179, 218);
     }
@@ -444,9 +448,15 @@
         $('#graph-tooltip').append("<span class='tooltip_title'>Node name:</span> " + obj['name']);
         $('#graph-tooltip').append("<br /><span class='tooltip_title'>Connected nodes:</span><ul>");
       }
+      $.each($('line'), function (index, line) {
+        if (line.getAttribute('belongs_to')) {
+          if ($.inArray(obj['name'], line.getAttribute('belongs_to').split(' ')) !== -1) {
+            $(line).attr('class', 'link link_hover');
+          }
+        }
+      });
       $.each(obj['connected_nodes'], function(index, obj) {
         $("#nodeid_"+obj).attr('class', 'node node_hover');
-        console.log(obj);
         if (showTooltip) {
           $('#graph-tooltip').append("<li>"+obj+"</li>");
         }
@@ -475,6 +485,9 @@
       $.each(obj['connected_nodes'], function(index, obj) {
         $("#nodeid_"+obj).attr('class', 'node');
         $('#graph-tooltip').append("<li>"+obj+"</li>");
+      });
+      $.each($('line'), function (index, line) {
+        $(line).attr('class', 'link');
       });
     } else {
       $('#nodeid_'+obj['source']['name']).attr("class", "node");
