Removed section node, added optional whitespace because of retarded syntax in intervention logical files...........

--- a/views/start.erb
+++ b/views/start.erb
@@ -143,6 +143,7 @@
     $("#file-upload").show();
     $("#show-file-upload").hide()
     $("#sidebar").hide();
+    $("#show-sidebar").hide()
     $("g").empty();
     $.each($('li.selected'), function() {
       $(this).removeClass('selected')
