Minor changes to reset graph when uploading a new intervention

--- a/views/start.erb
+++ b/views/start.erb
@@ -150,6 +150,7 @@
     });
     $("#toggle-tooltip").attr("class", "ex-small-li selected");
     showTooltip = true;
+    $("#reset-graph").trigger('click');
   });
   
   $("#show-sidebar").click(function() {
