--- a/views/start.erb
+++ b/views/start.erb
@@ -42,7 +42,7 @@
     .div_link {
       stroke: rgb(65,219,0);
     }
-    .a_href_link {
+    .jumpto_link {
       stroke: rgb(12,93,165);
     }
     </style>
@@ -101,7 +101,7 @@
           <span class="text">Highlight<br /><strong>div</strong> links</span>
         </div>
       </li>
-      <li id='a_href_link'>
+      <li id='jumpto_link'>
         <div class="layer">
           <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="50px" height="20px">
             <line x1="10" y1="10" x2="40" y2="10" style="stroke:rgb(12,93,165);stroke-width:2" />
@@ -109,7 +109,7 @@
             <circle cx="40" cy="10" r="5" stroke="white" stroke-width="1.5" fill="rgb(76, 179, 218)" />
           </svg>
           <br />
-          <span class="text">Highlight<br /><strong>a href</strong> links</span>
+          <span class="text">Highlight<br /><strong>jumpto</strong> links</span>
         </div>
       </li>
       <li class="ex-small-li selected" id="toggle-tooltip">
@@ -199,8 +199,8 @@
         case 'div_link':
           resetLink('div');
           break;
-        case 'a_href_link':
-          resetLink('a_href');
+        case 'jumpto_link':
+          resetLink('jumpto');
           break;
         case 'toggle-tooltip':
           showTooltip = !showTooltip;
@@ -218,8 +218,8 @@
         case 'div_link':
           colourLink('div');
           break;
-        case 'a_href_link':
-          colourLink('a_href');
+        case 'jumpto_link':
+          colourLink('jumpto');
           break;
         case 'toggle-tooltip':
           showTooltip = !showTooltip;
@@ -244,8 +244,8 @@
           case 'div':
             this.setAttribute("class", "link div_link");
             break;
-          case 'a_href':
-            this.setAttribute("class", "link a_href_link");
+          case 'jumpto':
+            this.setAttribute("class", "link jumpto_link");
             break;
           default:
             this.setAttribute("class", "link");
